<?xml version="1.0" encoding="utf-8"?>


<!-- This layout is used to show a dialog for sending the mail
  -to a email id whenever we click on the button
 -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/transparent">
    <requestFocus/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginForLayoutsInDialog"
        android:background="@drawable/border_background_for_dialog">

        <TextView
            android:id="@+id/txvDetailReportHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/marginForDialogs"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/marginForViewsInDialog"
            android:gravity="center"
            android:paddingEnd="@dimen/paddingForDialogs"
            android:paddingRight="25dp"
            android:text="@string/your_report_is_ready"
            android:textColor="@color/DarkBlue"
            android:focusable="true"
            android:textSize="@dimen/textsizeForDialog" >
            </TextView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widthForViewsInDialogs"
            android:layout_marginBottom="@dimen/marginForDialogs"
            android:layout_marginLeft="@dimen/marginForDialogs"
            android:layout_below="@+id/txvDetailReportHeading">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/marginForDialogs"
                android:layout_marginRight="@dimen/marginForDialogs"
                android:drawableEnd="@drawable/email_enabled_icon"
                android:drawableRight="@drawable/email_enabled_icon"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:maxLines="1"
                android:textSize="@dimen/textSizeForEditTextInDialog"/>
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgDialogClosed"
        android:layout_width="@dimen/dimentionsForCancelImageInDialog"
        android:layout_height="@dimen/dimentionsForCancelImageInDialog"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/cancelled" />


</RelativeLayout>